--- a/auth.html
+++ b/auth.html
@@ -7,8 +7,8 @@
 	<meta name="description" content="Web application to work with the FortNotes system"/>
 	<link rel="icon" type="image/png" href="img/favicon.png"/>
 	<link rel="stylesheet/less" type="text/css" href="css/main.less"/>
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.5.0/less.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"/>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.5.0/less.min.js"></script>
+	<link rel="stylesheet" type="text/css" href=//fonts.googleapis.com/css?family=Open+Sans"/>
 	<script type="text/javascript"></script>
 </head>
 <body>
