--- a/list.html
+++ b/list.html
@@ -7,14 +7,45 @@
 	<meta name="description" content="Web application to work with the FortNotes system"/>
 	<link rel="icon" type="image/png" href="img/favicon.png"/>
 	<link rel="stylesheet/less" type="text/css" href="css/main.less"/>
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.5.0/less.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans"/>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.5.0/less.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
 	<script type="text/javascript"></script>
 </head>
 <body>
 
 	<div class="page list active">
-		list
+		<div class="header">
+            <span>Latest notes</span>
+            <div class="new-note"><img src="img/note.png"></div>
+            <div class="search"><img src="img/search.png"></div>
+            <div class="options"><img src="img/parameters.png"></div>
+        </div>
+        <div class="list">
+            <div class="note">
+                <img src="img/Twitter.png">
+            </div>
+            <div class="note">
+                <img src="img/facebook.png">
+            </div>
+            <div class="note">
+                <img src="img/git.png">
+            </div>
+            <div class="note">
+
+            </div>
+            <div class="note">
+
+            </div>
+            <div class="note">
+
+            </div>
+            <div class="note">
+
+            </div>
+            <div class="note">
+
+            </div>
+        </div>
 	</div>
 
 </body>
