--- a/list.html
+++ b/list.html
@@ -21,14 +21,72 @@
             <div class="options"><img src="img/parameters.png"></div>
         </div>
         <div class="list">
-            <div class="note">
-                <img src="img/Twitter.png">
+            <div class="note active">
+                        <div class="icon">
+                            <img class="icon" src="https://getfavicon.appspot.com/https://twitter.com?defaulticon=none">
+                        </div>
+                        <div class="body">
+                            <div class="info">
+                                <span class="name">site url:</span>
+                                <span class="data">
+                                    <a href="https://twitter.com/" target="_blank">https://twitter.com</a>
+                                </span>
+                                <span class="name">username:</span>
+                                <span class="data">lightlani</span>
+                            </div>
+                            <div class="tags">
+                                <span class="tag">vk</span>
+                                <span class="tag">friends</span>
+                                <span class="tag">account</span>
+                                <span class="tag">social</span>
+                            </div>
+                        </div>
             </div>
-            <div class="note">
-                <img src="img/facebook.png">
+            <div class="note active">
+                <div class="icon">
+                    <img class="icon" src="https://getfavicon.appspot.com/http://www.facebook.com">
+                </div>
+                <div class="body">
+                    <div class="info">
+                        <span class="name">site url:</span>
+                                <span class="data">
+                                    <a href="http://www.facebook.com/" target="_blank">http://www.facebook.com/</a>
+                                </span>
+                        <span class="name">username:</span>
+                        <span class="data">lightlani</span>
+                        <span class="name">e-mail:</span>
+                        <span class="data">lightlani@gmail.com</span>
+                    </div>
+                    <div class="tags">
+                        <span class="tag">facebook</span>
+                        <span class="tag">account</span>
+                        <span class="tag">social</span>
+                    </div>
+                </div>
             </div>
-            <div class="note">
-                <img src="img/git.png">
+            <div class="note active">
+                <div class="icon">
+                    <img class="icon" src="https://getfavicon.appspot.com/https://github.com">
+                </div>
+                <div class="body">
+                    <div class="info">
+                        <span class="name">site url:</span>
+                                <span class="data">
+                                    <a href="https://github.com/" target="_blank">https://github.com/</a>
+                                </span>
+                        <span class="name">username:</span>
+                        <span class="data">svdp</span>
+                        <span class="name">e-mail:</span>
+                        <span class="data">lightlani@gmail.com</span>
+                        <span class="name">comments:</span>
+                        <span class="data">web-based hosting service</span>
+                    </div>
+                    <div class="tags">
+                        <span class="tag">facebook</span>
+                        <span class="tag">account</span>
+                        <span class="tag">social</span>
+                    </div>
+                </div>
             </div>
             <div class="note">
 
